fix order numbers wrapping

--- a/static/base.css
+++ b/static/base.css
@@ -152,6 +152,7 @@ a.headshot {
 
 .sortable td.sorter {
     cursor: move;
+    white-space: nowrap;  /* prevent numbers from wrapping to next line */
 }
 
 .selected {
